# NumDiff_react_diff_eq

./: README.md  application.py  pyproject.toml  theory.py
