[project]
name = "numdiff-project1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython>=8.32.0",
    "matplotlib>=3.10.0",
    "numba>=0.61",
    "numpy",
    "scalene>=1.5.51",
    "scipy>=1.15.2",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
]
